<resources>
    <string name="app_name">LetChat</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Register">Register</string>
    <string name="LogIn">Log In</string>
    <string name="comfirmPassword">comfirm password</string>
    <string name="email">email</string>
    <string name="signOut">Sign Out</string>
    <string name="SignUp">sign up</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="friend">Friends</string>
    <string name="addFriend">Add Friends</string>
</resources>
